[tool.poetry]
name = "mpd-subsonic-scrobbler"
version = "0.3.1"
description = "A Subsonic Scrobbler for Music Player Daemon"
authors = ["GioF_71 <giovanni.fulco@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-mpd2 = "^3.0.5"
subsonic-connector = "^0.1.13"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
