[project]
name = "mpd-subsonic-scrobbler"
description = "A Subsonic Scrobbler for Music Player Daemon"
license = {text = "MIT License"}
version = "0.5.4"
authors = [
  {name = "Giovanni Fulco"}
]
requires-python = ">= 3.9"
dependencies = [
  "python-mpd2",
  "subsonic-connector == 0.3.5",
  "py-sonic == 1.0.1",
  "python-dotenv"
]

[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
